--- a/src/update4/org/cict/linked_manager/LinkedHome.fxml
+++ b/src/update4/org/cict/linked_manager/LinkedHome.fxml
@@ -53,7 +53,7 @@
          <children>
             <VBox prefHeight="565.0" prefWidth="266.0" spacing="10.0">
                <children>
-                  <JFXButton fx:id="btn_view_system" graphicTextGap="20.0" maxWidth="1.7976931348623157E308" prefHeight="44.0" prefWidth="396.0" text="Linked Session" textFill="WHITE">
+                  <JFXButton fx:id="btn_linked_session" graphicTextGap="20.0" maxWidth="1.7976931348623157E308" prefHeight="44.0" prefWidth="396.0" text="Linked Session" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -71,7 +71,7 @@
                         <Insets left="-85.0" />
                      </padding>
                   </JFXButton>
-                  <JFXButton fx:id="btn_view_admin" graphicTextGap="20.0" maxWidth="1.7976931348623157E308" prefHeight="44.0" prefWidth="396.0" text="New Session" textFill="WHITE">
+                  <JFXButton fx:id="btn_new_session" graphicTextGap="20.0" maxWidth="1.7976931348623157E308" prefHeight="44.0" prefWidth="396.0" text="New Session" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -92,7 +92,7 @@
                         <Insets left="-95.0" />
                      </padding>
                   </JFXButton>
-                  <JFXButton fx:id="btn_view_assistant_admin" graphicTextGap="20.0" maxWidth="1.7976931348623157E308" prefHeight="44.0" prefWidth="396.0" text="Marshalls" textFill="WHITE">
+                  <JFXButton fx:id="btn_marshalls" graphicTextGap="20.0" maxWidth="1.7976931348623157E308" prefHeight="44.0" prefWidth="396.0" text="Marshalls" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -114,7 +114,7 @@
             </VBox>
             <StackPane HBox.hgrow="ALWAYS">
                <children>
-                  <VBox fx:id="vbox_system" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="vbox_home" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
