--- a/src/update3/org/cict/my_account/MyAccountHome.fxml
+++ b/src/update3/org/cict/my_account/MyAccountHome.fxml
@@ -190,7 +190,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="192.168.254.254">
+                                                <Label fx:id="lbl_history_ip" text="IP">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -200,7 +200,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="FE:FE:FE:FE:FE">
+                                                <Label fx:id="lbl_history_mac" text="MAC">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -219,7 +219,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="Windows 10@amd64">
+                                                <Label fx:id="lbl_history_os" text="Operating System">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -229,7 +229,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="Melvin">
+                                                <Label fx:id="lbl_history_terminal" text="Terminal">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -239,7 +239,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="Jhon Melvin">
+                                                <Label fx:id="lbl_history_user" text="User">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -275,7 +275,7 @@
                               <Insets left="30.0" top="20.0" />
                            </padding>
                         </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0" styleClass="metro-table" stylesheets="@metro-ui-table.css" VBox.vgrow="ALWAYS">
+                        <VBox fx:id="vbox_access_history" prefHeight="265.0" prefWidth="813.0" styleClass="metro-table" stylesheets="@metro-ui-table.css" VBox.vgrow="ALWAYS">
                            <VBox.margin>
                               <Insets left="65.0" top="20.0" />
                            </VBox.margin>
