--- a/src/update2/org/cict/layout/curriculum/actual-data.fxml
+++ b/src/update2/org/cict/layout/curriculum/actual-data.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="594.0" prefWidth="853.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="225.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="563.0" prefWidth="773.0" HBox.hgrow="ALWAYS">
+      <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="243.0" prefWidth="773.0" HBox.hgrow="ALWAYS">
          <children>
-            <VBox spacing="10.0" HBox.hgrow="ALWAYS">
+            <VBox maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="753.0" spacing="10.0" HBox.hgrow="ALWAYS">
                <children>
-                  <VBox>
+                  <VBox maxWidth="1.7976931348623157E308">
                      <children>
                         <HBox maxWidth="1.7976931348623157E308">
                            <children>
@@ -68,195 +68,7 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                   </VBox>
-                  <VBox alignment="CENTER">
-                     <children>
-                        <Label accessibleText="name" text="NONE" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                           <graphic>
-                              <ImageView fitHeight="23.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@img/Autograph_52px.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Label>
-                        <Label text="Curriculum Name" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="10.0" />
-                           </font>
-                        </Label>
-                        <Label accessibleText="description" text="NONE" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                           <graphic>
-                              <ImageView fitHeight="23.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@img/Resume_50px.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Label>
-                        <Label layoutX="256.0" layoutY="31.0" text="Description" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="10.0" />
-                           </font>
-                        </Label>
-                        <Label accessibleText="major" layoutX="235.0" layoutY="27.0" text="NONE" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                           <graphic>
-                              <ImageView fitHeight="23.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@img/Corporal%20CPL_48px.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Label>
-                        <Label layoutX="270.0" layoutY="67.0" text="Major" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="10.0" />
-                           </font>
-                        </Label>
-                        <Label accessibleText="ladder" layoutX="250.0" layoutY="44.0" text="NO" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                           <graphic>
-                              <ImageView fitHeight="18.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@img/Ladder_52px.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Label>
-                        <Label layoutX="283.0" layoutY="113.0" text="Ladderized" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="10.0" />
-                           </font>
-                        </Label>
-                        <Label accessibleText="type" layoutX="274.0" layoutY="139.0" text="NONE" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                           <graphic>
-                              <ImageView fitHeight="18.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@img/School_64px.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </Label>
-                        <Label layoutX="271.0" layoutY="160.0" text="Ladderization Type" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="10.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </VBox>
-                  <VBox maxWidth="1.7976931348623157E308" prefHeight="66.0" prefWidth="511.0">
-                     <children>
-                        <Label text="Primary" textFill="WHITE" />
-                        <VBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" style="-fx-border-color: #fff;" VBox.vgrow="ALWAYS">
-                           <children>
-                              <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
-                                 <children>
-                                    <ImageView fitHeight="39.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@img/primary.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Label accessibleText="p_id" text="-" textFill="WHITE">
-                                       <font>
-                                          <Font name="System Bold" size="15.0" />
-                                       </font>
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@img/name.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Label>
-                                    <Label accessibleText="p_name" layoutX="49.0" layoutY="25.0" text="-" textFill="WHITE">
-                                       <font>
-                                          <Font name="System Bold" size="15.0" />
-                                       </font>
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@img/Autograph_52px.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Label>
-                                    <Label accessibleText="p_description" layoutX="76.0" layoutY="25.0" text="-" textFill="WHITE">
-                                       <font>
-                                          <Font name="System Bold" size="15.0" />
-                                       </font>
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@img/Resume_50px.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Label>
-                                    <Label accessibleText="p_major" layoutX="118.0" layoutY="25.0" text="-" textFill="WHITE">
-                                       <font>
-                                          <Font name="System Bold" size="15.0" />
-                                       </font>
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@img/Corporal%20CPL_48px.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Label>
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </VBox>
-                  <VBox layoutX="10.0" layoutY="112.0" maxWidth="1.7976931348623157E308" prefHeight="66.0" prefWidth="511.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label accessibleText="eq" text="Equivalent (0)" textFill="WHITE" />
-                        <VBox accessibleText="vbox_eq" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="94.0" prefWidth="511.0" styleClass="metro-table" stylesheets="@../../../../../update3/org/cict/layout/sectionmain/metro-ui-table.css" VBox.vgrow="ALWAYS">
-                           <children>
-                              <Label text="NO EQUIVALENT FOUND" textFill="WHITE">
-                                 <font>
-                                    <Font name="System Bold" size="15.0" />
-                                 </font>
-                                 <graphic>
-                                    <ImageView fitHeight="26.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@img/Equal%20Sign%202_48px.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Label>
-                           </children>
-                        </VBox>
-                     </children>
-                  </VBox>
-                  <VBox layoutX="20.0" layoutY="10.0">
+                  <VBox layoutX="20.0" layoutY="10.0" maxWidth="1.7976931348623157E308">
                      <children>
                         <HBox maxWidth="1.7976931348623157E308">
                            <children>
@@ -308,7 +120,7 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                   </VBox>
-                  <VBox layoutX="20.0" layoutY="418.0">
+                  <VBox layoutX="20.0" layoutY="418.0" maxWidth="1.7976931348623157E308">
                      <children>
                         <HBox maxWidth="1.7976931348623157E308">
                            <children>
@@ -360,6 +172,91 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                   </VBox>
+                  <HBox maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <VBox maxWidth="1.7976931348623157E308" prefHeight="84.0" prefWidth="139.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <VBox prefHeight="42.0" prefWidth="192.0">
+                                 <children>
+                                    <Label accessibleText="name" text="NONE" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="19.0" />
+                                       </font>
+                                    </Label>
+                                    <Label text="Curriculum Name" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="10.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox alignment="CENTER_LEFT">
+                                 <children>
+                                    <Label accessibleText="major" text="NONE" textFill="WHITE">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label text="Major" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold" size="10.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER_LEFT" prefHeight="84.0" prefWidth="400.0">
+                           <children>
+                              <Label accessibleText="description" text="NONE" textFill="WHITE" />
+                              <Label text="Description" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="10.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="84.0" prefWidth="365.0">
+                           <children>
+                              <HBox alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
+                                 <children>
+                                    <VBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="80.0">
+                                       <children>
+                                          <Label accessibleText="ladder" prefHeight="27.0" prefWidth="46.0" text="NO" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Ladderized" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="10.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </VBox>
+                                    <VBox alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                                       <children>
+                                          <Label accessibleText="type" alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="150.0" text="NONE" textAlignment="RIGHT" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Ladderization Type" textFill="WHITE">
+                                             <font>
+                                                <Font name="System Bold" size="10.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="30.0" />
+                     </VBox.margin>
+                  </HBox>
                </children>
             </VBox>
          </children>
@@ -369,7 +266,7 @@
       </HBox>
    </children>
    <padding>
-      <Insets left="100.0" right="100.0" top="20.0" />
+      <Insets left="70.0" right="70.0" top="5.0" />
    </padding>
    <styleClass>
       <String fx:value="metro-row" />
