--- a/src/update5/org/cict/student/layout/CurriculumChooser.fxml
+++ b/src/update5/org/cict/student/layout/CurriculumChooser.fxml
@@ -10,7 +10,7 @@
 
 <VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" style="-fx-background-color: #008CB7;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label styleClass="metro-title-33" text="Course Chooser" textFill="WHITE">
+      <Label styleClass="metro-title-33" text="Curriculum Chooser" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
