--- a/src/update5/org/cict/student/layout/InfoStudent.fxml
+++ b/src/update5/org/cict/student/layout/InfoStudent.fxml
@@ -520,7 +520,7 @@
                               </VBox>
                               <VBox fx:id="vbox_hidden" alignment="BOTTOM_CENTER" prefHeight="635.0" prefWidth="393.0">
                                  <children>
-                                    <VBox alignment="BOTTOM_CENTER" prefHeight="232.0" prefWidth="319.0">
+                                    <VBox alignment="BOTTOM_CENTER" prefHeight="439.0" prefWidth="377.0">
                                        <VBox.margin>
                                           <Insets />
                                        </VBox.margin>
@@ -562,7 +562,7 @@
                                                       </Label>
                                                    </children>
                                                 </VBox>
-                                                <JFXButton fx:id="btn_shift_course" maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="304.0" style="-fx-border-color: #fff;" text="Shift Course" VBox.vgrow="ALWAYS">
+                                                <JFXButton fx:id="btn_shift_course" maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="304.0" style="-fx-border-color: #fff;" text="  Shift Course" VBox.vgrow="ALWAYS">
                                                    <styleClass>
                                                       <String fx:value="label" />
                                                       <String fx:value="metro-base-color" />
@@ -608,9 +608,76 @@
                                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                              </padding>
                                           </VBox>
+                                          <VBox fx:id="vbox_moving_up" layoutX="10.0" layoutY="12.0" prefHeight="182.0" prefWidth="377.0" spacing="10.0" style="-fx-border-color: #fff;">
+                                             <children>
+                                                <VBox prefHeight="96.0" prefWidth="355.0">
+                                                   <children>
+                                                      <Label text="Moving Up">
+                                                         <font>
+                                                            <Font size="21.0" />
+                                                         </font>
+                                                         <graphic>
+                                                            <ImageView fitHeight="33.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                                                               <image>
+                                                                  <Image url="@images/tip_50.png" />
+                                                               </image>
+                                                            </ImageView>
+                                                         </graphic>
+                                                      </Label>
+                                                      <Label prefHeight="72.0" prefWidth="277.0" text="All the grades of the current curriculum must be filled up and passed to proceed here." wrapText="true">
+                                                         <font>
+                                                            <Font size="15.0" />
+                                                         </font>
+                                                         <graphic>
+                                                            <VBox prefHeight="57.0" prefWidth="20.0">
+                                                               <children>
+                                                                  <ImageView fitHeight="22.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                                                     <image>
+                                                                        <Image url="@images/Info_96px.png" />
+                                                                     </image>
+                                                                  </ImageView>
+                                                               </children>
+                                                            </VBox>
+                                                         </graphic>
+                                                         <VBox.margin>
+                                                            <Insets left="20.0" />
+                                                         </VBox.margin>
+                                                      </Label>
+                                                   </children>
+                                                </VBox>
+                                                <JFXButton fx:id="btn_move_up" maxWidth="1.7976931348623157E308" prefHeight="40.0" prefWidth="377.0" style="-fx-border-color: #fff;" text="   Moving Up">
+                                                   <styleClass>
+                                                      <String fx:value="label" />
+                                                      <String fx:value="metro-base-color" />
+                                                   </styleClass>
+                                                   <font>
+                                                      <Font size="18.0" />
+                                                   </font>
+                                                   <graphic>
+                                                      <ImageView fitHeight="27.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@images/icons8-stairs-up-filled-100.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                   </graphic>
+                                                   <padding>
+                                                      <Insets bottom="10.0" top="10.0" />
+                                                   </padding>
+                                                   <VBox.margin>
+                                                      <Insets />
+                                                   </VBox.margin>
+                                                </JFXButton>
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                             </padding>
+                                             <VBox.margin>
+                                                <Insets top="20.0" />
+                                             </VBox.margin>
+                                          </VBox>
                                        </children>
                                     </VBox>
-                                    <VBox alignment="BOTTOM_RIGHT" prefHeight="170.0" prefWidth="367.0" styleClass="metro-base-color">
+                                    <VBox alignment="BOTTOM_RIGHT" prefHeight="106.0" prefWidth="377.0" styleClass="metro-base-color">
                                        <children>
                                           <Label fx:id="lbl_verified_by" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="NONE" wrapText="true">
                                              <font>
